fix: resolve checkstyle LineLength config and null-safe List.of() conversions
- Move LineLength check from TreeWalker to Checker level in checkstyle.xml
- Revert null-unsafe List.of() calls to Arrays.asList() in test code

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>