@@ -10,6 +10,7 @@
 package org.openmrs.api;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -448,7 +449,7 @@ public class LocationServiceTest extends BaseContextSensitiveTest {
 	@Test
 	public void getLocationsHavingAnyTag_shouldReturnEmptyListWhenNoLocationHasTheGivenTags() {
 		LocationService ls = Context.getLocationService();
-		assertEquals(0, ls.getLocationsHavingAnyTag(List.of(ls.getLocationTagByName("Retired"))).size());
+		assertEquals(0, ls.getLocationsHavingAnyTag(Arrays.asList(ls.getLocationTagByName("Retired"))).size());
 	}
 
 	/**
