@@ -10,6 +10,7 @@
 package org.openmrs.api.db.hibernate;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -59,7 +60,8 @@ public class HibernateLocationDAOTest extends BaseContextSensitiveTest {
 
 	@Test
 	public void getLocationsHavingAllTags_shouldReturnEmptyListWhenNoLocationHasTheGivenTags() {
-		assertEquals(0, dao.getLocationsHavingAllTags(List.of(dao.getLocationTagByName("Nobody got this tag"))).size());
+		assertEquals(0,
+		    dao.getLocationsHavingAllTags(Arrays.asList(dao.getLocationTagByName("Nobody got this tag"))).size());
 	}
 
 	@Test
